[gd_scene load_steps=47 format=3 uid="uid://b8c0rmf807qqs"]

[ext_resource type="Script" path="res://Scripts/Skills/johnny_skill_area.gd" id="1_0vaib"]
[ext_resource type="AudioStream" uid="uid://35m3t347vj5j" path="res://Assets/Sounds/FXs/Heroes/Johnny/乔尼号角.wav" id="2_x4vh2"]
[ext_resource type="Texture2D" uid="uid://cjwfi23pc7s78" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_00.png" id="3_4ofr8"]
[ext_resource type="Texture2D" uid="uid://dcd11m427a8v7" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_01.png" id="4_owvqr"]
[ext_resource type="Texture2D" uid="uid://cnkuxiecl0ftc" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_02.png" id="5_lfes2"]
[ext_resource type="Texture2D" uid="uid://cxfakmtdwbqsa" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_03.png" id="6_3ludt"]
[ext_resource type="Texture2D" uid="uid://11vwts3682t5" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_04.png" id="7_14y8h"]
[ext_resource type="Texture2D" uid="uid://nrpbs7nhjoh" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_05.png" id="8_kmstx"]
[ext_resource type="Texture2D" uid="uid://p30wqannx3uf" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_06.png" id="9_btwrb"]
[ext_resource type="Texture2D" uid="uid://b2k62xbw32tpd" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_07.png" id="10_bxd0v"]
[ext_resource type="Texture2D" uid="uid://cyik1ops8pr01" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_08.png" id="11_o3cqb"]
[ext_resource type="Texture2D" uid="uid://dfnmkic32243u" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_09.png" id="12_5t7f4"]
[ext_resource type="Texture2D" uid="uid://b6mqsxgpniefp" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_10.png" id="13_vpnnf"]
[ext_resource type="Texture2D" uid="uid://bvquulyud6r3y" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_11.png" id="14_nllrk"]
[ext_resource type="Texture2D" uid="uid://cwsvtyvs3cdt7" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_12.png" id="15_oljt7"]
[ext_resource type="Texture2D" uid="uid://b243nocfc36rt" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_13.png" id="16_76n86"]
[ext_resource type="Texture2D" uid="uid://becb1llv7hsdb" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_14.png" id="17_cykt4"]
[ext_resource type="Texture2D" uid="uid://bqho60r3i1136" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_15.png" id="18_u8sko"]
[ext_resource type="Texture2D" uid="uid://dxu64esb0gd5q" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_16.png" id="19_sc36k"]
[ext_resource type="Texture2D" uid="uid://cmaeplmvrl2tw" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_17.png" id="20_u6wk5"]
[ext_resource type="Texture2D" uid="uid://baang2uuyvjhb" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_18.png" id="21_dp3pn"]
[ext_resource type="Texture2D" uid="uid://0kfysmyb3hlr" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_19.png" id="22_xft4d"]
[ext_resource type="Texture2D" uid="uid://ctcttm8y2uh6f" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_20.png" id="23_wchgh"]
[ext_resource type="Texture2D" uid="uid://cyrfegsy4m7pf" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_21.png" id="24_70rd0"]
[ext_resource type="Texture2D" uid="uid://bvwti301y2ofs" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_22.png" id="25_o22yt"]
[ext_resource type="Texture2D" uid="uid://doec47yeneeyc" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_23.png" id="26_pt45x"]
[ext_resource type="Texture2D" uid="uid://cpccxr2oaw7om" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_24.png" id="27_i3jsj"]
[ext_resource type="Texture2D" uid="uid://ckidfdifp3n1a" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_25.png" id="28_da0gc"]
[ext_resource type="Texture2D" uid="uid://cq16cxi8n1yar" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_26.png" id="29_pnngu"]
[ext_resource type="Texture2D" uid="uid://c3qjs8df10w1w" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_27.png" id="30_2vec3"]
[ext_resource type="Texture2D" uid="uid://bj0g2h5wrb5dw" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_28.png" id="31_s6yv5"]
[ext_resource type="Texture2D" uid="uid://e5ogix61vuet" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_29.png" id="32_imjyv"]
[ext_resource type="Texture2D" uid="uid://d2yvrfi4rux4q" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_30.png" id="33_u04ji"]
[ext_resource type="Texture2D" uid="uid://b5337nqrlittk" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_31.png" id="34_47u5l"]
[ext_resource type="Texture2D" uid="uid://cctlwvhk3ijd5" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_32.png" id="35_5wx5b"]
[ext_resource type="Texture2D" uid="uid://14bbkqnmni70" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_33.png" id="36_qwceo"]
[ext_resource type="Texture2D" uid="uid://c43h2ai2p2sal" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_34.png" id="37_2g4tk"]
[ext_resource type="Texture2D" uid="uid://dl8sx53sb5t0y" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_35.png" id="38_b3tgr"]
[ext_resource type="Texture2D" uid="uid://dlki8wev02mux" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_36.png" id="39_ik2oh"]
[ext_resource type="Texture2D" uid="uid://do7gv06vsnnnm" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_37.png" id="40_4gx5g"]
[ext_resource type="Texture2D" uid="uid://co8g3bndxmwjv" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_38.png" id="41_6ptsn"]
[ext_resource type="Texture2D" uid="uid://d0p16tjvyvgsl" path="res://Assets/Animations/Heroes/Johnny/JohnnyFlag/flow_39.png" id="42_fqi72"]
[ext_resource type="Texture2D" uid="uid://djqnwtl1embrg" path="res://Assets/Animations/Enemies/Shadow.png" id="43_shhcg"]
[ext_resource type="Texture2D" uid="uid://ccglhhifm554s" path="res://Assets/Images/Effects/鼓舞光环.png" id="44_yuncf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sncij"]
radius = 73.9444

[sub_resource type="SpriteFrames" id="SpriteFrames_n1c2v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4ofr8")
}, {
"duration": 1.0,
"texture": ExtResource("4_owvqr")
}, {
"duration": 1.0,
"texture": ExtResource("5_lfes2")
}, {
"duration": 1.0,
"texture": ExtResource("6_3ludt")
}, {
"duration": 1.0,
"texture": ExtResource("7_14y8h")
}, {
"duration": 1.0,
"texture": ExtResource("8_kmstx")
}, {
"duration": 1.0,
"texture": ExtResource("9_btwrb")
}, {
"duration": 1.0,
"texture": ExtResource("10_bxd0v")
}, {
"duration": 1.0,
"texture": ExtResource("11_o3cqb")
}, {
"duration": 1.0,
"texture": ExtResource("12_5t7f4")
}, {
"duration": 1.0,
"texture": ExtResource("13_vpnnf")
}, {
"duration": 1.0,
"texture": ExtResource("14_nllrk")
}, {
"duration": 1.0,
"texture": ExtResource("15_oljt7")
}, {
"duration": 1.0,
"texture": ExtResource("16_76n86")
}, {
"duration": 1.0,
"texture": ExtResource("17_cykt4")
}, {
"duration": 1.0,
"texture": ExtResource("18_u8sko")
}, {
"duration": 1.0,
"texture": ExtResource("19_sc36k")
}, {
"duration": 1.0,
"texture": ExtResource("20_u6wk5")
}, {
"duration": 1.0,
"texture": ExtResource("21_dp3pn")
}, {
"duration": 1.0,
"texture": ExtResource("22_xft4d")
}, {
"duration": 1.0,
"texture": ExtResource("23_wchgh")
}, {
"duration": 1.0,
"texture": ExtResource("24_70rd0")
}, {
"duration": 1.0,
"texture": ExtResource("25_o22yt")
}, {
"duration": 1.0,
"texture": ExtResource("26_pt45x")
}, {
"duration": 1.0,
"texture": ExtResource("27_i3jsj")
}, {
"duration": 1.0,
"texture": ExtResource("28_da0gc")
}, {
"duration": 1.0,
"texture": ExtResource("29_pnngu")
}, {
"duration": 1.0,
"texture": ExtResource("30_2vec3")
}, {
"duration": 1.0,
"texture": ExtResource("31_s6yv5")
}, {
"duration": 1.0,
"texture": ExtResource("32_imjyv")
}, {
"duration": 1.0,
"texture": ExtResource("33_u04ji")
}, {
"duration": 1.0,
"texture": ExtResource("34_47u5l")
}, {
"duration": 1.0,
"texture": ExtResource("35_5wx5b")
}, {
"duration": 1.0,
"texture": ExtResource("36_qwceo")
}, {
"duration": 1.0,
"texture": ExtResource("37_2g4tk")
}, {
"duration": 1.0,
"texture": ExtResource("38_b3tgr")
}, {
"duration": 1.0,
"texture": ExtResource("39_ik2oh")
}, {
"duration": 1.0,
"texture": ExtResource("40_4gx5g")
}, {
"duration": 1.0,
"texture": ExtResource("41_6ptsn")
}, {
"duration": 1.0,
"texture": ExtResource("42_fqi72")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[node name="JohnnySkillArea" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 1048
script = ExtResource("1_0vaib")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.7)
shape = SubResource("CircleShape2D_sncij")
debug_color = Color(1, 1, 1, 0)

[node name="SkillAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_x4vh2")
autoplay = true
bus = &"Sound"

[node name="Flag" type="Node2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="FlagSprite" type="AnimatedSprite2D" parent="Flag"]
sprite_frames = SubResource("SpriteFrames_n1c2v")
autoplay = "default"
offset = Vector2(0, -22)

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -1
position = Vector2(-4.76837e-07, -1.90735e-06)
scale = Vector2(0.05, 0.05)
texture = ExtResource("43_shhcg")
region_enabled = true
region_rect = Rect2(194, 273, 174, 61)

[node name="BuffEffect" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -1
position = Vector2(0, -9)
scale = Vector2(1.37234, 1.87234)
texture = ExtResource("44_yuncf")
region_rect = Rect2(20, 24, 110, 63)

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="DurationTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
